// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddDevice Modal addDevice modal 1`] = `
<div
  style={
    Object {
      "marginTop": "35%",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.7)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "white",
          "boxShadow": "0 2px 16px 0 rgba(0, 0, 0, 0.16)",
          "height": 547,
          "left": "50%",
          "opacity": 1,
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": 417,
          "zIndex": 1,
        }
      }
    >
      <svg
        height={9}
        onClick={[Function]}
        style={
          Object {
            "color": "#191919",
            "cursor": "pointer",
            "float": "right",
            "marginRight": 20,
            "marginTop": 20,
            "opacity": 0.4,
          }
        }
        viewBox="0 0 14 14"
        width={9}
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <defs>
          <path
            d="M13.7 12.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3L7 8.4l-5.3 5.3c-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4L5.6 7 .3 1.7C-.1 1.3-.1.7.3.3c.4-.4 1-.4 1.4 0L7 5.6 12.3.3c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L8.4 7l5.3 5.3z"
            id="close-svg"
          />
        </defs>
        <use
          fill="currentColor"
          fillRule="nonzero"
          xlinkHref="#close-svg"
        />
      </svg>
      <div
        className="AddDevice"
      >
        <h1>
          Add a new device
        </h1>
        <div
          className="QRCode"
          style={
            Object {
              "backgroundImage": "url(http://www.datafakegenerator.com/temp/test409236e0431d1d4dcf66ffba56d9d43c.png)",
            }
          }
        />
        <a
          href="https://QWA.NT/0BJ8ZX"
        >
          QWA.NT/0BJ8ZX
        </a>
        <p
          style={
            Object {
              "paddingBottom": 64,
            }
          }
        >
          Scan your QR Code on the devices that you want to sync with.
        </p>
        <p>
          You do not know how to do this ?
        </p>
        <button
          className="Button secondary"
          onClick={undefined}
          style={
            Object {
              "width": undefined,
            }
          }
        >
          ADD A DEVICE
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Applications Page with applications 1`] = `
<div
  className="Applications"
>
  <div>
    <div
      className="title-container"
    >
      <h1>
        My applications
      </h1>
      <h3>
        Find your apps connected to Masq
      </h3>
    </div>
    <div
      className="cards-grid"
    >
      <div
        className="Card"
      >
        <div
          className="image"
          style={
            Object {
              "backgroundImage": "url(https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb)",
            }
          }
        />
        <div
          className="flex"
        >
          <div
            className="content"
          >
            <div
              className="CardHeader"
            >
              <div
                className="line"
                style={
                  Object {
                    "backgroundColor": "#a3005c",
                  }
                }
              />
              <div
                className="right"
              >
                <div
                  className="SwitchButton"
                >
                  <label
                    style={
                      Object {
                        "color": "#a3005c",
                      }
                    }
                  >
                    ENABLED
                  </label>
                  <div
                    className=""
                    id="switch-container"
                    onClick={[Function]}
                  >
                    <div
                      className=""
                      id="background"
                      style={
                        Object {
                          "backgroundColor": "#a3005c",
                        }
                      }
                    />
                    <div
                      className=""
                      id="cursor"
                      style={
                        Object {
                          "transform": "translate3d(26px, 0, 0)",
                        }
                      }
                    />
                  </div>
                </div>
                <svg
                  color="#191919"
                  height={15}
                  onClick={[Function]}
                  style={
                    Object {
                      "cursor": "pointer",
                      "opacity": 0.5,
                    }
                  }
                  viewBox="0 0 20 22"
                  width={13}
                >
                  <path
                    d="M19 4h-4V3c0-1.7-1.3-3-3-3H8C6.3 0 5 1.3 5 3v1H1c-.6 0-1 .4-1 1s.4 1 1 1h1v13c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V6h1c.6 0 1-.4 1-1s-.4-1-1-1zM7 3c0-.6.4-1 1-1h4c.6 0 1 .4 1 1v1H7zm9 16c0 .6-.4 1-1 1H5c-.6 0-1-.4-1-1V6h12zm-7-9v6c0 .6-.4 1-1 1s-1-.4-1-1v-6c0-.6.4-1 1-1s1 .4 1 1zm4 0v6c0 .6-.4 1-1 1s-1-.4-1-1v-6c0-.6.4-1 1-1s1 .4 1 1z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <h2>
              Qwant Music
            </h2>
            <p
              className="description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
            </p>
            <svg
              color="#a3005c"
              height={24}
              style={
                Object {
                  "float": "right",
                }
              }
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0 0v7h7V0zm5 5H2V2h3zM0 17h7v7H0zm5 5v-3H2v3zM17 0h7v7h-7zm5 5V2h-3v3zm0 4h2v8h-7v-2h5zm-5 10h7v5h-2v-3h-3v3h-2zM9 0h6v7h-2V2H9zm4 9h6v4h-2v-2h-2v4h-4v2h4v7h-2v-5H9v-6h4zM9 21h2v3H9zm-5-8h3v2H4zm5-9h2v7H2v4H0V9h9z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Card"
      >
        <div
          className="image"
          style={
            Object {
              "backgroundImage": "url(https://images.pexels.com/photos/592753/pexels-photo-592753.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb)",
              "filter": "grayscale(50%)",
            }
          }
        />
        <div
          className="flex"
        >
          <div
            className="content"
          >
            <div
              className="CardHeader"
            >
              <div
                className="line"
                style={
                  Object {
                    "backgroundColor": "var(--blue-100)",
                  }
                }
              />
              <div
                className="right"
              >
                <div
                  className="SwitchButton"
                >
                  <label
                    style={
                      Object {
                        "color": null,
                      }
                    }
                  >
                    DISABLED
                  </label>
                  <div
                    className=""
                    id="switch-container"
                    onClick={[Function]}
                  >
                    <div
                      className=""
                      id="background"
                      style={Object {}}
                    />
                    <div
                      className=""
                      id="cursor"
                      style={Object {}}
                    />
                  </div>
                </div>
                <svg
                  color="#191919"
                  height={15}
                  onClick={[Function]}
                  style={
                    Object {
                      "cursor": "pointer",
                      "opacity": 0.5,
                    }
                  }
                  viewBox="0 0 20 22"
                  width={13}
                >
                  <path
                    d="M19 4h-4V3c0-1.7-1.3-3-3-3H8C6.3 0 5 1.3 5 3v1H1c-.6 0-1 .4-1 1s.4 1 1 1h1v13c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V6h1c.6 0 1-.4 1-1s-.4-1-1-1zM7 3c0-.6.4-1 1-1h4c.6 0 1 .4 1 1v1H7zm9 16c0 .6-.4 1-1 1H5c-.6 0-1-.4-1-1V6h12zm-7-9v6c0 .6-.4 1-1 1s-1-.4-1-1v-6c0-.6.4-1 1-1s1 .4 1 1zm4 0v6c0 .6-.4 1-1 1s-1-.4-1-1v-6c0-.6.4-1 1-1s1 .4 1 1z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                id="logo"
                style={
                  Object {
                    "backgroundImage": "url(https://upload.wikimedia.org/wikipedia/commons/f/fd/Qwant-v3.png)",
                    "backgroundPosition": "top center",
                    "backgroundSize": "cover",
                    "height": "16px",
                    "marginRight": "4px",
                    "width": "16px",
                  }
                }
              />
              <h2>
                Qwant Maps
              </h2>
            </div>
            <p
              className="description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
            </p>
            <svg
              color="var(--blue-100)"
              height={24}
              style={
                Object {
                  "float": "right",
                }
              }
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0 0v7h7V0zm5 5H2V2h3zM0 17h7v7H0zm5 5v-3H2v3zM17 0h7v7h-7zm5 5V2h-3v3zm0 4h2v8h-7v-2h5zm-5 10h7v5h-2v-3h-3v3h-2zM9 0h6v7h-2V2H9zm4 9h6v4h-2v-2h-2v4h-4v2h4v7h-2v-5H9v-6h4zM9 21h2v3H9zm-5-8h3v2H4zm5-9h2v7H2v4H0V9h9z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Card"
      >
        <div
          className="flex"
        >
          <div
            className="content"
          >
            <div
              className="CardHeader"
            >
              <div
                className="line"
                style={
                  Object {
                    "backgroundColor": "#a3005c",
                  }
                }
              />
              <div
                className="right"
              >
                <div
                  className="SwitchButton"
                >
                  <label
                    style={
                      Object {
                        "color": "#a3005c",
                      }
                    }
                  >
                    ENABLED
                  </label>
                  <div
                    className=""
                    id="switch-container"
                    onClick={[Function]}
                  >
                    <div
                      className=""
                      id="background"
                      style={
                        Object {
                          "backgroundColor": "#a3005c",
                        }
                      }
                    />
                    <div
                      className=""
                      id="cursor"
                      style={
                        Object {
                          "transform": "translate3d(26px, 0, 0)",
                        }
                      }
                    />
                  </div>
                </div>
                <svg
                  color="#191919"
                  height={15}
                  onClick={[Function]}
                  style={
                    Object {
                      "cursor": "pointer",
                      "opacity": 0.5,
                    }
                  }
                  viewBox="0 0 20 22"
                  width={13}
                >
                  <path
                    d="M19 4h-4V3c0-1.7-1.3-3-3-3H8C6.3 0 5 1.3 5 3v1H1c-.6 0-1 .4-1 1s.4 1 1 1h1v13c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V6h1c.6 0 1-.4 1-1s-.4-1-1-1zM7 3c0-.6.4-1 1-1h4c.6 0 1 .4 1 1v1H7zm9 16c0 .6-.4 1-1 1H5c-.6 0-1-.4-1-1V6h12zm-7-9v6c0 .6-.4 1-1 1s-1-.4-1-1v-6c0-.6.4-1 1-1s1 .4 1 1zm4 0v6c0 .6-.4 1-1 1s-1-.4-1-1v-6c0-.6.4-1 1-1s1 .4 1 1z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <h2>
              Qwant Shopping
            </h2>
            <p
              className="description"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
            </p>
            <svg
              color="#a3005c"
              height={24}
              style={
                Object {
                  "float": "right",
                }
              }
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M0 0v7h7V0zm5 5H2V2h3zM0 17h7v7H0zm5 5v-3H2v3zM17 0h7v7h-7zm5 5V2h-3v3zm0 4h2v8h-7v-2h5zm-5 10h7v5h-2v-3h-3v3h-2zM9 0h6v7h-2V2H9zm4 9h6v4h-2v-2h-2v4h-4v2h4v7h-2v-5H9v-6h4zM9 21h2v3H9zm-5-8h3v2H4zm5-9h2v7H2v4H0V9h9z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AuthApp Modal authApp modal 1`] = `
<div
  style={
    Object {
      "marginTop": "35%",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.7)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "white",
          "boxShadow": "0 2px 16px 0 rgba(0, 0, 0, 0.16)",
          "height": 670,
          "left": "50%",
          "opacity": 1,
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": 511,
          "zIndex": 1,
        }
      }
    >
      <svg
        height={9}
        onClick={[Function]}
        style={
          Object {
            "color": "#191919",
            "cursor": "pointer",
            "float": "right",
            "marginRight": 20,
            "marginTop": 20,
            "opacity": 0.4,
          }
        }
        viewBox="0 0 14 14"
        width={9}
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <defs>
          <path
            d="M13.7 12.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3L7 8.4l-5.3 5.3c-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4L5.6 7 .3 1.7C-.1 1.3-.1.7.3.3c.4-.4 1-.4 1.4 0L7 5.6 12.3.3c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L8.4 7l5.3 5.3z"
            id="close-svg"
          />
        </defs>
        <use
          fill="currentColor"
          fillRule="nonzero"
          xlinkHref="#close-svg"
        />
      </svg>
      <div
        style={
          Object {
            "height": 150,
            "width": "100%",
          }
        }
      />
      <div
        className="AuthApp"
      >
        <p
          style={
            Object {
              "fontSize": "16px",
              "fontStretch": "normal",
              "fontStyle": "normal",
              "fontWeight": "normal",
              "letterSpacing": "0.1px",
              "lineHeight": "normal",
              "textAlign": "center",
            }
          }
        >
          New connection request from:
        </p>
        <p
          style={
            Object {
              "fontSize": "32px",
              "fontStretch": "normal",
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": "0.2px",
              "lineHeight": "normal",
              "textAlign": "center",
            }
          }
        >
          https://masq.io/search
        </p>
        <p
          style={
            Object {
              "color": "var(--blue-200)",
              "fontSize": "14px",
              "fontStretch": "normal",
              "fontStyle": "normal",
              "fontWeight": "500",
              "letterSpacing": "normal",
              "lineHeight": 1.57,
              "paddingBottom": 32,
              "textAlign": "center",
              "width": 380,
            }
          }
        >
          This notification appears because that application asks permission to your Masq storage.
        </p>
        <p
          style={
            Object {
              "color": "var(--blue-200)",
              "fontSize": "14px",
              "fontStretch": "normal",
              "fontStyle": "normal",
              "fontWeight": "500",
              "letterSpacing": "normal",
              "lineHeight": 1.57,
              "paddingBottom": 32,
              "textAlign": "center",
              "width": 380,
            }
          }
        >
          If you are not at the origin of this request or if you have question, please contact our help center.
        </p>
        <div
          style={
            Object {
              "display": "grid",
              "gridGap": 32,
              "gridTemplateColumns": "auto auto",
            }
          }
        >
          <button
            className="Button primary"
            onClick={[Function]}
            style={
              Object {
                "width": undefined,
              }
            }
          >
            Reject
          </button>
          <button
            className="Button primary"
            onClick={[Function]}
            style={
              Object {
                "width": undefined,
              }
            }
          >
            Accept
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Avatar with upload and with image 1`] = `
<div>
  <input
    accept=".jpg, .jpeg, .png"
    name="avatar"
    onChange={undefined}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
  <div
    className="Avatar upload"
    onClick={[Function]}
    style={
      Object {
        "backgroundImage": "url(https://randomuser.me/api/portraits/women/79.jpg)",
      }
    }
  >
    <svg
      className="camera"
      color="white"
      height={33}
      viewBox="0 0 24 20"
      width={40}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M21 3h-3.5L15.8.4c-.2-.2-.5-.4-.8-.4H9c-.3 0-.6.2-.8.4L6.5 3H3C1.3 3 0 4.3 0 6v11c0 1.7 1.3 3 3 3h18c1.7 0 3-1.3 3-3V6c0-1.7-1.3-3-3-3zm1 14c0 .6-.4 1-1 1H3c-.6 0-1-.4-1-1V6c0-.6.4-1 1-1h4c.3 0 .6-.2.8-.4L9.5 2h4.9l1.7 2.6c.3.2.6.4.9.4h4c.6 0 1 .4 1 1v11zM12 6c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 8c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3-1.3 3-3 3z"
          id="camera-svg"
        />
      </defs>
      <use
        fill="currentColor"
        fillRule="nonzero"
        xlinkHref="#camera-svg"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Avatar with upload and without image 1`] = `
<div>
  <input
    accept=".jpg, .jpeg, .png"
    name="avatar"
    onChange={undefined}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
  <svg
    className="Avatar upload"
    color="var(--grey-200)"
    height={120}
    onClick={[Function]}
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
    viewBox="0 0 120 120"
    width={120}
  >
    <g
      fill="none"
      fillRule="evenodd"
    >
      <rect
        height={118}
        opacity={0.5}
        rx={10}
        stroke="#999"
        strokeWidth={2}
        width={118}
        x={1}
        y={1}
      />
      <path
        d="M77.2 46.6h-6.533l-3.174-4.853C67.12 41.373 66.56 41 66 41H54.8c-.56 0-1.12.373-1.493.747L50.133 46.6H43.6c-3.173 0-5.6 2.427-5.6 5.6v20.533c0 3.174 2.427 5.6 5.6 5.6h33.6c3.173 0 5.6-2.426 5.6-5.6V52.2c0-3.173-2.427-5.6-5.6-5.6zm1.867 26.133c0 1.12-.747 1.867-1.867 1.867H43.6c-1.12 0-1.867-.747-1.867-1.867V52.2c0-1.12.747-1.867 1.867-1.867h7.467c.56 0 1.12-.373 1.493-.746l3.173-4.854h9.147l3.173 4.854c.56.373 1.12.746 1.68.746H77.2c1.12 0 1.867.747 1.867 1.867zM60.4 52.2c-5.227 0-9.333 4.107-9.333 9.333 0 5.227 4.106 9.334 9.333 9.334s9.333-4.107 9.333-9.334c0-5.226-4.106-9.333-9.333-9.333zm0 14.933c-3.173 0-5.6-2.426-5.6-5.6 0-3.173 2.427-5.6 5.6-5.6s5.6 2.427 5.6 5.6c0 3.174-2.427 5.6-5.6 5.6z"
        fill="#ccc"
        fillRule="nonzero"
      />
    </g>
  </svg>
</div>
`;

exports[`Storyshots Avatar without upload and with image 1`] = `
<div
  className="Avatar"
  style={
    Object {
      "backgroundImage": "url(https://randomuser.me/api/portraits/women/79.jpg)",
    }
  }
/>
`;

exports[`Storyshots Avatar without upload without image 1`] = `
<div
  className="Avatar initials"
  style={
    Object {
      "backgroundColor": "var(--blue-300)",
      "position": "relative",
    }
  }
>
  <p>
    JD
  </p>
</div>
`;

exports[`Storyshots Button primary with a label 1`] = `
<button
  className="Button primary"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  SOME BUTTON
</button>
`;

exports[`Storyshots Button secondary with a label 1`] = `
<button
  className="Button secondary"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  SOME BUTTON
</button>
`;

exports[`Storyshots Card disabled 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "var(--blue-100)",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": null,
              }
            }
          >
            DISABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={Object {}}
            />
            <div
              className=""
              id="cursor"
              style={Object {}}
            />
          </div>
        </div>
      </div>
      <h2>
        sometitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card enabled 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "blue",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": "blue",
              }
            }
          >
            ENABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={
                Object {
                  "backgroundColor": "blue",
                }
              }
            />
            <div
              className=""
              id="cursor"
              style={
                Object {
                  "transform": "translate3d(26px, 0, 0)",
                }
              }
            />
          </div>
        </div>
      </div>
      <h2>
        sometitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card enabled with a description 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "blue",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": "blue",
              }
            }
          >
            ENABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={
                Object {
                  "backgroundColor": "blue",
                }
              }
            />
            <div
              className=""
              id="cursor"
              style={
                Object {
                  "transform": "translate3d(26px, 0, 0)",
                }
              }
            />
          </div>
        </div>
      </div>
      <h2>
        sometitle
      </h2>
      <p
        className="description"
      >
        some description
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card enabled with a logo 1`] = `
<div
  className="Card"
>
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "blue",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": "blue",
              }
            }
          >
            ENABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={
                Object {
                  "backgroundColor": "blue",
                }
              }
            />
            <div
              className=""
              id="cursor"
              style={
                Object {
                  "transform": "translate3d(26px, 0, 0)",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <div
          id="logo"
          style={
            Object {
              "backgroundImage": "url(https://upload.wikimedia.org/wikipedia/commons/f/fd/Qwant-v3.png)",
              "backgroundPosition": "top center",
              "backgroundSize": "cover",
              "height": "16px",
              "marginRight": "4px",
              "width": "16px",
            }
          }
        />
        <h2>
          sometitle
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card enabled with an image 1`] = `
<div
  className="Card"
>
  <div
    className="image"
    style={
      Object {
        "backgroundImage": "url(https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb)",
      }
    }
  />
  <div
    className="flex"
  >
    <div
      className="content"
    >
      <div
        className="CardHeader"
      >
        <div
          className="line"
          style={
            Object {
              "backgroundColor": "blue",
            }
          }
        />
        <div
          className="SwitchButton"
        >
          <label
            style={
              Object {
                "color": "blue",
              }
            }
          >
            ENABLED
          </label>
          <div
            className=""
            id="switch-container"
            onClick={[Function]}
          >
            <div
              className=""
              id="background"
              style={
                Object {
                  "backgroundColor": "blue",
                }
              }
            />
            <div
              className=""
              id="cursor"
              style={
                Object {
                  "transform": "translate3d(26px, 0, 0)",
                }
              }
            />
          </div>
        </div>
      </div>
      <h2>
        sometitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots CardHeader disabled 1`] = `
<div
  className="CardHeader"
>
  <div
    className="line"
    style={
      Object {
        "backgroundColor": "var(--blue-100)",
      }
    }
  />
  <div
    className="SwitchButton"
  >
    <label
      style={
        Object {
          "color": null,
        }
      }
    >
      DISABLED
    </label>
    <div
      className=""
      id="switch-container"
      onClick={[Function]}
    >
      <div
        className=""
        id="background"
        style={Object {}}
      />
      <div
        className=""
        id="cursor"
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots CardHeader enabled 1`] = `
<div
  className="CardHeader"
>
  <div
    className="line"
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
  />
  <div
    className="SwitchButton"
  >
    <label
      style={
        Object {
          "color": "blue",
        }
      }
    >
      ENABLED
    </label>
    <div
      className=""
      id="switch-container"
      onClick={[Function]}
    >
      <div
        className=""
        id="background"
        style={
          Object {
            "backgroundColor": "blue",
          }
        }
      />
      <div
        className=""
        id="cursor"
        style={
          Object {
            "transform": "translate3d(26px, 0, 0)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots CircleIndicator with color blue 1`] = `
<div
  className="CircleIndicator"
  style={
    Object {
      "border": "solid 2px blue",
    }
  }
/>
`;

exports[`Storyshots CircleIndicator with color red 1`] = `
<div
  className="CircleIndicator"
  style={
    Object {
      "border": "solid 2px red",
    }
  }
/>
`;

exports[`Storyshots Devices Page with devices 1`] = `
<div
  className="Devices"
>
  <div>
    <div
      className="title-container"
    >
      <h1>
        My devices
      </h1>
      <h3>
        Find your devices connected to Masq
      </h3>
    </div>
    <div
      className="cards-grid"
    >
      <div>
        <div
          className="Card"
        >
          <div
            className="flex"
          >
            <div
              className="content"
            >
              <div
                className="CardHeader"
              >
                <div
                  className="line"
                  style={
                    Object {
                      "backgroundColor": "#40ae6c",
                    }
                  }
                />
                <div
                  className="SwitchButton"
                >
                  <label
                    style={
                      Object {
                        "color": "#40ae6c",
                      }
                    }
                  >
                    ENABLED
                  </label>
                  <div
                    className=""
                    id="switch-container"
                    onClick={[Function]}
                  >
                    <div
                      className=""
                      id="background"
                      style={
                        Object {
                          "backgroundColor": "#40ae6c",
                        }
                      }
                    />
                    <div
                      className=""
                      id="cursor"
                      style={
                        Object {
                          "transform": "translate3d(26px, 0, 0)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
              <h2>
                TV de Margaux
              </h2>
              <div
                className="lastsync"
              >
                <p>
                  LAST SYNCHRONIZATION
                </p>
                <div
                  className="syncstatus"
                >
                  <div
                    className="CircleIndicator"
                    style={
                      Object {
                        "border": "solid 2px #40ae6c",
                      }
                    }
                  />
                  <p
                    style={
                      Object {
                        "marginLeft": 8,
                      }
                    }
                  >
                    Now
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="Card"
        >
          <div
            className="flex"
          >
            <div
              className="content"
            >
              <div
                className="CardHeader"
              >
                <div
                  className="line"
                  style={
                    Object {
                      "backgroundColor": "#40ae6c",
                    }
                  }
                />
                <div
                  className="SwitchButton"
                >
                  <label
                    style={
                      Object {
                        "color": "#40ae6c",
                      }
                    }
                  >
                    ENABLED
                  </label>
                  <div
                    className=""
                    id="switch-container"
                    onClick={[Function]}
                  >
                    <div
                      className=""
                      id="background"
                      style={
                        Object {
                          "backgroundColor": "#40ae6c",
                        }
                      }
                    />
                    <div
                      className=""
                      id="cursor"
                      style={
                        Object {
                          "transform": "translate3d(26px, 0, 0)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
              <h2>
                iPhone de Margaux
              </h2>
              <div
                className="lastsync"
              >
                <p>
                  LAST SYNCHRONIZATION
                </p>
                <div
                  className="syncstatus"
                >
                  <div
                    className="CircleIndicator"
                    style={
                      Object {
                        "border": "solid 2px #40ae6c",
                      }
                    }
                  />
                  <p
                    style={
                      Object {
                        "marginLeft": 8,
                      }
                    }
                  >
                    Now
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="Card"
        >
          <div
            className="flex"
          >
            <div
              className="content"
            >
              <div
                className="CardHeader"
              >
                <div
                  className="line"
                  style={
                    Object {
                      "backgroundColor": "var(--blue-100)",
                    }
                  }
                />
                <div
                  className="SwitchButton"
                >
                  <label
                    style={
                      Object {
                        "color": null,
                      }
                    }
                  >
                    DISABLED
                  </label>
                  <div
                    className=""
                    id="switch-container"
                    onClick={[Function]}
                  >
                    <div
                      className=""
                      id="background"
                      style={Object {}}
                    />
                    <div
                      className=""
                      id="cursor"
                      style={Object {}}
                    />
                  </div>
                </div>
              </div>
              <h2>
                iPad de Margaux
              </h2>
              <div
                className="lastsync"
              >
                <p>
                  LAST SYNCHRONIZATION
                </p>
                <div
                  className="syncstatus"
                >
                  <div
                    className="CircleIndicator"
                    style={
                      Object {
                        "border": "solid 2px var(--blue-100)",
                      }
                    }
                  />
                  <p
                    style={
                      Object {
                        "marginLeft": 8,
                      }
                    }
                  >
                    Now
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="Card"
        >
          <div
            className="flex"
          >
            <div
              className="content"
            >
              <div
                className="CardHeader"
              >
                <div
                  className="line"
                  style={
                    Object {
                      "backgroundColor": "#40ae6c",
                    }
                  }
                />
                <div
                  className="SwitchButton"
                >
                  <label
                    style={
                      Object {
                        "color": "#40ae6c",
                      }
                    }
                  >
                    ENABLED
                  </label>
                  <div
                    className=""
                    id="switch-container"
                    onClick={[Function]}
                  >
                    <div
                      className=""
                      id="background"
                      style={
                        Object {
                          "backgroundColor": "#40ae6c",
                        }
                      }
                    />
                    <div
                      className=""
                      id="cursor"
                      style={
                        Object {
                          "transform": "translate3d(26px, 0, 0)",
                        }
                      }
                    />
                  </div>
                </div>
              </div>
              <h2>
                Oneplus de Matthieu
              </h2>
              <div
                className="lastsync"
              >
                <p>
                  LAST SYNCHRONIZATION
                </p>
                <div
                  className="syncstatus"
                >
                  <div
                    className="CircleIndicator"
                    style={
                      Object {
                        "border": "solid 2px #40ae6c",
                      }
                    }
                  />
                  <p
                    style={
                      Object {
                        "marginLeft": 8,
                      }
                    }
                  >
                    Now
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sidebar"
  >
    <button
      className="Button secondary"
      onClick={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
    >
      ADD A NEW DEVICE
    </button>
  </div>
</div>
`;

exports[`Storyshots Header default header 1`] = `
<div>
  <div
    id="invisible"
    style={
      Object {
        "height": 64,
      }
    }
  />
  <div
    className="Header"
  >
    <div
      id="top-section"
    >
      <div
        id="title-section"
      >
        <p
          id="title"
        >
          Masq
        </p>
        <p>
           by Qwant
        </p>
      </div>
      <a
        href="login"
        onClick={[Function]}
      >
        <svg
          className="home"
          height={22}
          onClick={undefined}
          viewBox="0 0 20 22"
          width={20}
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M19.6 7.217l-9-6.992c-.4-.3-.9-.3-1.2 0l-9 6.992c-.3.2-.4.5-.4.799v10.987C0 20.701 1.3 22 3 22h14c1.7 0 3-1.299 3-2.997V8.016c0-.3-.1-.6-.4-.8zM12 20.002H8v-7.99h4v7.99zm6-.999c0 .6-.4 1-1 1h-3v-8.99c0-.6-.4-1-1-1H7c-.6 0-1 .4-1 1v8.99H3c-.6 0-1-.4-1-1V8.515l8-6.193 8 6.193v10.488z"
              id="home-svg"
            />
          </defs>
          <use
            fill="currentColor"
            fillRule="nonzero"
            xlinkHref="#home-svg"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header with a user logged in 1`] = `
<div>
  <div
    id="invisible"
    style={
      Object {
        "height": 64,
      }
    }
  />
  <div
    className="Header"
  >
    <div
      id="top-section"
    >
      <div
        id="avatar-section"
      >
        <div
          className="Avatar"
          style={
            Object {
              "backgroundImage": "url(https://randomuser.me/api/portraits/women/79.jpg)",
            }
          }
        />
        <span
          id="avatar-text"
          style={
            Object {
              "fontSize": "14px",
            }
          }
        >
          some username
        </span>
        <svg
          className="caret"
          height={10}
          viewBox="0 0 14 10"
          width={14}
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M13.7 1.7l-6 6c-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3l-6-6C-.1 1.3-.1.7.3.3c.4-.4 1-.4 1.4 0L7 5.6 12.3.3c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4z"
              id="chevron-svg"
            />
          </defs>
          <use
            fill="currentColor"
            fillRule="nonzero"
            xlinkHref="#chevron-svg"
          />
        </svg>
      </div>
      <a
        href="login"
        onClick={[Function]}
      >
        <svg
          className="home"
          height={22}
          onClick={undefined}
          viewBox="0 0 20 22"
          width={20}
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M19.6 7.217l-9-6.992c-.4-.3-.9-.3-1.2 0l-9 6.992c-.3.2-.4.5-.4.799v10.987C0 20.701 1.3 22 3 22h14c1.7 0 3-1.299 3-2.997V8.016c0-.3-.1-.6-.4-.8zM12 20.002H8v-7.99h4v7.99zm6-.999c0 .6-.4 1-1 1h-3v-8.99c0-.6-.4-1-1-1H7c-.6 0-1 .4-1 1v8.99H3c-.6 0-1-.4-1-1V8.515l8-6.193 8 6.193v10.488z"
              id="home-svg"
            />
          </defs>
          <use
            fill="currentColor"
            fillRule="nonzero"
            xlinkHref="#home-svg"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header with shadow 1`] = `
<div>
  <div
    id="invisible"
    style={
      Object {
        "height": 64,
      }
    }
  />
  <div
    className="Header shadow"
  >
    <div
      id="top-section"
    >
      <div
        id="title-section"
      >
        <p
          id="title"
        >
          Masq
        </p>
        <p>
           by Qwant
        </p>
      </div>
      <a
        href="login"
        onClick={[Function]}
      >
        <svg
          className="home"
          height={22}
          onClick={undefined}
          viewBox="0 0 20 22"
          width={20}
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M19.6 7.217l-9-6.992c-.4-.3-.9-.3-1.2 0l-9 6.992c-.3.2-.4.5-.4.799v10.987C0 20.701 1.3 22 3 22h14c1.7 0 3-1.299 3-2.997V8.016c0-.3-.1-.6-.4-.8zM12 20.002H8v-7.99h4v7.99zm6-.999c0 .6-.4 1-1 1h-3v-8.99c0-.6-.4-1-1-1H7c-.6 0-1 .4-1 1v8.99H3c-.6 0-1-.4-1-1V8.515l8-6.193 8 6.193v10.488z"
              id="home-svg"
            />
          </defs>
          <use
            fill="currentColor"
            fillRule="nonzero"
            xlinkHref="#home-svg"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Loading Page with a user 1`] = `
<div
  style={
    Object {
      "height": 800,
    }
  }
>
  <div
    className="LoadingPage"
  >
    <svg
      height={102}
      style={
        Object {
          "paddingBottom": 64,
        }
      }
      viewBox="0 0 297 102"
      width={297}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M0 63.878V.365h84.277v63.513z"
          id="a"
        />
      </defs>
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M122.377 52.454c-11.104 0-20.138-9.004-20.138-20.072 0-11.067 9.034-20.07 20.138-20.07 11.105 0 20.14 9.003 20.14 20.07 0 11.068-9.035 20.072-20.14 20.072m0-51.828c-17.57 0-31.862 14.246-31.862 31.756 0 17.511 14.293 31.758 31.862 31.758a32.037 32.037 0 0 0 19.63-6.75l1.088-.85v7.6h11.145V31.97c0-1.316-.344-4.275-.485-5.074C151.09 11.674 137.892.626 122.377.626"
          fill="#FFF"
        />
        <g
          transform="translate(0 .261)"
        >
          <mask
            fill="#fff"
            id="b"
          >
            <use
              xlinkHref="#a"
            />
          </mask>
          <path
            d="M60.316 12.116c6.835 0 12.397 5.641 12.397 12.574v39.188h11.564V24.69C84.277 11.277 73.528.365 60.316.365c-6.424 0-12.686 2.695-17.182 7.393l-.995 1.04-.996-1.04C36.643 3.06 30.38.365 23.961.365 10.75.365 0 11.277 0 24.69v39.188h11.564V24.69c0-6.933 5.562-12.574 12.397-12.574 6.834 0 12.393 5.641 12.393 12.574v23.383h11.565V24.69c0-6.933 5.56-12.574 12.397-12.574"
            fill="#FFF"
            mask="url(#b)"
          />
        </g>
        <path
          d="M179.607 12.052h29.86V.582h-29.86c-10.282 0-18.671 7.893-19.093 17.899a4.052 4.052 0 0 0-.047.859c0 2.045.36 4.1 1.068 6.1.934 2.83 2.477 5.244 4.585 7.179 5.318 4.876 12.852 5.427 15.035 5.479.424.01.678.017.847 0h8.386c4.082.036 7.403 3.303 7.403 7.283 0 4.02-3.35 7.289-7.47 7.289h-29.859v11.47h29.86c10.28 0 18.67-7.894 19.092-17.9.047-.275.06-.565.048-.859 0-2.046-.361-4.103-1.07-6.1-.934-2.83-2.477-5.245-4.584-7.179-5.317-4.876-12.851-5.427-15.034-5.479-.363-.008-.623-.014-.815.001h-8.42c-4.081-.036-7.4-3.304-7.4-7.284 0-4.02 3.35-7.288 7.468-7.288"
          fill="#FFF"
        />
        <path
          d="M262.535 89.721c0 2.756-2.25 4.998-5.015 4.998-2.765 0-5.013-2.242-5.013-4.998 0-2.755 2.248-4.997 5.013-4.997 2.765 0 5.015 2.242 5.015 4.997m3.24-1.443c-.69-3.939-4.158-6.91-8.255-6.91-4.621 0-8.38 3.748-8.38 8.353 0 4.606 3.759 8.354 8.38 8.354a8.384 8.384 0 0 0 5.164-1.775v1.564h3.218v-8.25c0-.348-.089-1.116-.127-1.336m26.94 6.253l-.153-.293-.287.184a2.995 2.995 0 0 1-.353.176l-.03.012a3.48 3.48 0 0 1-.673.181l-.024.005-.09.01c-.457.054-.876.023-1.25-.107a2.04 2.04 0 0 1-.13-.052l-.063-.03a1.886 1.886 0 0 1-.208-.117l-.03-.019a1.775 1.775 0 0 1-.768-1.317v-8.357h3.464v-3.152h-3.464V77.53h-3.22v16.123c0 .864.4 2.137 1.522 3.119 1.046.916 2.4 1.108 3.35 1.108.254 0 .512-.013.778-.043.078-.012.163-.027.245-.043l.015-.002c1.095-.126 2.04-.73 2.303-.913l.166-.115-1.1-2.234zm-48.69-2.729c0 1.508-1.206 2.734-2.69 2.734-1.483 0-2.69-1.226-2.69-2.734V85.76h-3.493v6.042c0 1.508-1.207 2.734-2.691 2.734-1.484 0-2.69-1.226-2.69-2.734v-9.9h-3.495v9.9c0 3.459 2.774 6.272 6.185 6.272a6.15 6.15 0 0 0 4.437-1.908 6.153 6.153 0 0 0 4.436 1.908c3.411 0 6.186-2.813 6.186-6.272v-9.9h-3.495v9.9zm31.709-10.433c-2.921 0-5.123 1.091-6.544 3.244-1.156 1.751-1.156 3.772-1.156 5.109v7.976h3.493v-8.647c0-.999.305-4.259 4.207-4.259 3.902 0 4.205 3.26 4.205 4.259v8.647h3.495v-7.976c0-1.337 0-3.358-1.156-5.11-1.423-2.152-3.624-3.243-6.544-3.243m19.506-2.01c.255 0 .433-.087.433-.294 0-.184-.102-.304-.407-.304h-.271v.599h.245zm-.517-.82h.586c.33 0 .652.11.652.51 0 .199-.144.39-.339.446l.416.686h-.314l-.33-.606h-.4v.606h-.27v-1.643zm1.857.853c0-.766-.568-1.331-1.28-1.331-.712 0-1.28.565-1.28 1.33 0 .757.568 1.307 1.28 1.307.712 0 1.28-.55 1.28-1.306zm-2.823 0c0-.933.703-1.555 1.543-1.555.847 0 1.543.622 1.543 1.555 0 .924-.696 1.538-1.543 1.538-.84 0-1.543-.614-1.543-1.538z"
          fill="#CCC"
        />
        <path
          d="M271.991 50.827c3.694-5.22 5.872-11.632 5.872-18.564 0-17.528-13.918-31.737-31.087-31.737-17.17 0-31.087 14.21-31.087 31.737 0 17.528 13.917 31.737 31.087 31.737.158 0 .317-.003.475-.006V53.311l.048-.389c-.174.005-.348.008-.523.008-11.14 0-20.173-9.253-20.173-20.667 0-11.413 9.032-20.666 20.173-20.666 11.14 0 20.172 9.253 20.172 20.666 0 7.926-4.356 14.808-10.748 18.275l15.867 13.935 6.644-7.756-6.72-5.89z"
          fill="#FFF"
        />
        <path
          d="M221.63 93.703a11.614 11.614 0 0 0 2.396-7.1c0-6.491-5.3-11.773-11.813-11.773-6.513 0-11.813 5.282-11.813 11.774 0 6.492 5.3 11.773 11.813 11.773.324 0 .648-.018.972-.045v-3.795a8.237 8.237 0 0 1-.972.063c-4.484 0-8.132-3.635-8.132-8.104 0-4.469 3.648-8.105 8.132-8.105 4.483 0 8.132 3.636 8.132 8.105a8.058 8.058 0 0 1-3.843 6.884l-.267.166 5.603 4.92 2.242-2.618-2.45-2.145zm-42.362-2.015c-1.044 0-1.883.789-1.883 1.909 0 1.104.791 1.892 1.883 1.892 1.14 0 1.899-.788 1.899-1.892 0-1.12-.839-1.909-1.9-1.909m.84 6.183a3.6 3.6 0 0 1-2.659-1.151h-.032v.915h-2.77V84.07h2.802v6.246c.665-.647 1.567-1.01 2.658-1.01 2.374 0 4.036 1.925 4.036 4.29 0 2.367-1.662 4.275-4.036 4.275M194.84 89.543l-6.378 12.192h-3.228l2.802-5.362-3.846-6.83h3.228l2.263 4.149 1.931-4.149z"
          fill="#CCC"
        />
      </g>
    </svg>
    <div
      className="user"
    >
      <div
        className="Avatar"
        style={
          Object {
            "backgroundImage": "url(https://randomuser.me/api/portraits/men/1.jpg)",
          }
        }
      />
      <p
        className="username"
      >
        Jeff
      </p>
    </div>
    <div
      className="Loading"
    >
      <div
        className="loading-dots"
        style={
          Object {
            "backgroundColor": "#4ebbc2",
          }
        }
      />
      <div
        className="loading-dots"
        style={
          Object {
            "backgroundColor": "#3394d2",
          }
        }
      />
      <div
        className="loading-dots"
        style={
          Object {
            "backgroundColor": "#e53b5b",
          }
        }
      />
    </div>
    <p>
      Loading
    </p>
    <svg
      id="Calque_1"
      preserveAspectRatio="none"
      style={
        Object {
          "bottom": 0,
          "maxHeight": 252,
          "position": "absolute",
        }
      }
      viewBox="0 0 252 52"
    >
      <path
        className="st0"
        d="M10.2 41.8c2 3.5 4.2 6.9 6.6 10.1H0v-3.5c3.3-2.3 6.7-4.5 10.2-6.6zM206.1 40.5c-4.6 3.4-8.8 7.2-12.6 11.4h-22.3c5.1-6.9 9.3-14.5 12.5-22.6 7.7 3.3 15.2 7 22.4 11.2z"
        fill="#3394D2"
      />
      <path
        d="M183.7 29.3c-3.2 8.1-7.4 15.7-12.5 22.6H16.7c-2.4-3.2-4.6-6.6-6.6-10.1C36.5 26 66.8 16.3 99.4 14.6a163.613 163.613 0 0 1 19.8 0c22.7 1.2 44.5 6.3 64.5 14.7z"
        fill="#4ebbc2"
      />
      <path
        d="M206.1 40.5c13-9.6 28.8-15.6 45.9-16.4v27.8h-28.6c-.3-.3-.7-.5-1-.8-.3-.2-.6-.5-.9-.7-.1 0-.1-.1-.2-.1-.3-.2-.6-.5-1-.7l-.9-.6c-.1-.1-.2-.2-.3-.2-.2-.2-.5-.3-.7-.5l-.9-.6c-.2-.1-.4-.3-.6-.4-.2-.2-.5-.3-.7-.5l-.9-.6-.9-.6s-.1-.1-.2-.1c-.4-.2-.7-.5-1.1-.7-.4-.2-.8-.5-1.1-.7s-.8-.5-1.2-.7c-.3-.2-.5-.3-.8-.5-1.4-.9-2.6-1.6-3.9-2.4z"
        fill="#e53b5b"
      />
      <path
        d="M223.4 51.9h-29.9c3.8-4.2 8-8 12.6-11.4 1.3.8 2.6 1.5 3.8 2.3.3.2.5.3.8.5.4.2.8.5 1.2.7s.8.5 1.1.7c.4.2.7.5 1.1.7.1 0 .1.1.2.1l.9.6.9.6c.3.2.5.3.7.5.2.1.4.3.6.4l.9.6c.2.2.5.3.7.5.1.1.2.2.3.2l.9.6c.3.2.7.5 1 .7.1 0 .1.1.2.1.3.2.6.5.9.7.4.4.7.6 1.1.9z"
        fill="#6f559f"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Loading Page without user 1`] = `
<div
  style={
    Object {
      "height": 800,
    }
  }
>
  <div
    className="LoadingPage"
  >
    <svg
      height={102}
      style={
        Object {
          "paddingBottom": 64,
        }
      }
      viewBox="0 0 297 102"
      width={297}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M0 63.878V.365h84.277v63.513z"
          id="a"
        />
      </defs>
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M122.377 52.454c-11.104 0-20.138-9.004-20.138-20.072 0-11.067 9.034-20.07 20.138-20.07 11.105 0 20.14 9.003 20.14 20.07 0 11.068-9.035 20.072-20.14 20.072m0-51.828c-17.57 0-31.862 14.246-31.862 31.756 0 17.511 14.293 31.758 31.862 31.758a32.037 32.037 0 0 0 19.63-6.75l1.088-.85v7.6h11.145V31.97c0-1.316-.344-4.275-.485-5.074C151.09 11.674 137.892.626 122.377.626"
          fill="#FFF"
        />
        <g
          transform="translate(0 .261)"
        >
          <mask
            fill="#fff"
            id="b"
          >
            <use
              xlinkHref="#a"
            />
          </mask>
          <path
            d="M60.316 12.116c6.835 0 12.397 5.641 12.397 12.574v39.188h11.564V24.69C84.277 11.277 73.528.365 60.316.365c-6.424 0-12.686 2.695-17.182 7.393l-.995 1.04-.996-1.04C36.643 3.06 30.38.365 23.961.365 10.75.365 0 11.277 0 24.69v39.188h11.564V24.69c0-6.933 5.562-12.574 12.397-12.574 6.834 0 12.393 5.641 12.393 12.574v23.383h11.565V24.69c0-6.933 5.56-12.574 12.397-12.574"
            fill="#FFF"
            mask="url(#b)"
          />
        </g>
        <path
          d="M179.607 12.052h29.86V.582h-29.86c-10.282 0-18.671 7.893-19.093 17.899a4.052 4.052 0 0 0-.047.859c0 2.045.36 4.1 1.068 6.1.934 2.83 2.477 5.244 4.585 7.179 5.318 4.876 12.852 5.427 15.035 5.479.424.01.678.017.847 0h8.386c4.082.036 7.403 3.303 7.403 7.283 0 4.02-3.35 7.289-7.47 7.289h-29.859v11.47h29.86c10.28 0 18.67-7.894 19.092-17.9.047-.275.06-.565.048-.859 0-2.046-.361-4.103-1.07-6.1-.934-2.83-2.477-5.245-4.584-7.179-5.317-4.876-12.851-5.427-15.034-5.479-.363-.008-.623-.014-.815.001h-8.42c-4.081-.036-7.4-3.304-7.4-7.284 0-4.02 3.35-7.288 7.468-7.288"
          fill="#FFF"
        />
        <path
          d="M262.535 89.721c0 2.756-2.25 4.998-5.015 4.998-2.765 0-5.013-2.242-5.013-4.998 0-2.755 2.248-4.997 5.013-4.997 2.765 0 5.015 2.242 5.015 4.997m3.24-1.443c-.69-3.939-4.158-6.91-8.255-6.91-4.621 0-8.38 3.748-8.38 8.353 0 4.606 3.759 8.354 8.38 8.354a8.384 8.384 0 0 0 5.164-1.775v1.564h3.218v-8.25c0-.348-.089-1.116-.127-1.336m26.94 6.253l-.153-.293-.287.184a2.995 2.995 0 0 1-.353.176l-.03.012a3.48 3.48 0 0 1-.673.181l-.024.005-.09.01c-.457.054-.876.023-1.25-.107a2.04 2.04 0 0 1-.13-.052l-.063-.03a1.886 1.886 0 0 1-.208-.117l-.03-.019a1.775 1.775 0 0 1-.768-1.317v-8.357h3.464v-3.152h-3.464V77.53h-3.22v16.123c0 .864.4 2.137 1.522 3.119 1.046.916 2.4 1.108 3.35 1.108.254 0 .512-.013.778-.043.078-.012.163-.027.245-.043l.015-.002c1.095-.126 2.04-.73 2.303-.913l.166-.115-1.1-2.234zm-48.69-2.729c0 1.508-1.206 2.734-2.69 2.734-1.483 0-2.69-1.226-2.69-2.734V85.76h-3.493v6.042c0 1.508-1.207 2.734-2.691 2.734-1.484 0-2.69-1.226-2.69-2.734v-9.9h-3.495v9.9c0 3.459 2.774 6.272 6.185 6.272a6.15 6.15 0 0 0 4.437-1.908 6.153 6.153 0 0 0 4.436 1.908c3.411 0 6.186-2.813 6.186-6.272v-9.9h-3.495v9.9zm31.709-10.433c-2.921 0-5.123 1.091-6.544 3.244-1.156 1.751-1.156 3.772-1.156 5.109v7.976h3.493v-8.647c0-.999.305-4.259 4.207-4.259 3.902 0 4.205 3.26 4.205 4.259v8.647h3.495v-7.976c0-1.337 0-3.358-1.156-5.11-1.423-2.152-3.624-3.243-6.544-3.243m19.506-2.01c.255 0 .433-.087.433-.294 0-.184-.102-.304-.407-.304h-.271v.599h.245zm-.517-.82h.586c.33 0 .652.11.652.51 0 .199-.144.39-.339.446l.416.686h-.314l-.33-.606h-.4v.606h-.27v-1.643zm1.857.853c0-.766-.568-1.331-1.28-1.331-.712 0-1.28.565-1.28 1.33 0 .757.568 1.307 1.28 1.307.712 0 1.28-.55 1.28-1.306zm-2.823 0c0-.933.703-1.555 1.543-1.555.847 0 1.543.622 1.543 1.555 0 .924-.696 1.538-1.543 1.538-.84 0-1.543-.614-1.543-1.538z"
          fill="#CCC"
        />
        <path
          d="M271.991 50.827c3.694-5.22 5.872-11.632 5.872-18.564 0-17.528-13.918-31.737-31.087-31.737-17.17 0-31.087 14.21-31.087 31.737 0 17.528 13.917 31.737 31.087 31.737.158 0 .317-.003.475-.006V53.311l.048-.389c-.174.005-.348.008-.523.008-11.14 0-20.173-9.253-20.173-20.667 0-11.413 9.032-20.666 20.173-20.666 11.14 0 20.172 9.253 20.172 20.666 0 7.926-4.356 14.808-10.748 18.275l15.867 13.935 6.644-7.756-6.72-5.89z"
          fill="#FFF"
        />
        <path
          d="M221.63 93.703a11.614 11.614 0 0 0 2.396-7.1c0-6.491-5.3-11.773-11.813-11.773-6.513 0-11.813 5.282-11.813 11.774 0 6.492 5.3 11.773 11.813 11.773.324 0 .648-.018.972-.045v-3.795a8.237 8.237 0 0 1-.972.063c-4.484 0-8.132-3.635-8.132-8.104 0-4.469 3.648-8.105 8.132-8.105 4.483 0 8.132 3.636 8.132 8.105a8.058 8.058 0 0 1-3.843 6.884l-.267.166 5.603 4.92 2.242-2.618-2.45-2.145zm-42.362-2.015c-1.044 0-1.883.789-1.883 1.909 0 1.104.791 1.892 1.883 1.892 1.14 0 1.899-.788 1.899-1.892 0-1.12-.839-1.909-1.9-1.909m.84 6.183a3.6 3.6 0 0 1-2.659-1.151h-.032v.915h-2.77V84.07h2.802v6.246c.665-.647 1.567-1.01 2.658-1.01 2.374 0 4.036 1.925 4.036 4.29 0 2.367-1.662 4.275-4.036 4.275M194.84 89.543l-6.378 12.192h-3.228l2.802-5.362-3.846-6.83h3.228l2.263 4.149 1.931-4.149z"
          fill="#CCC"
        />
      </g>
    </svg>
    <div
      className="Loading"
    >
      <div
        className="loading-dots"
        style={
          Object {
            "backgroundColor": "#4ebbc2",
          }
        }
      />
      <div
        className="loading-dots"
        style={
          Object {
            "backgroundColor": "#3394d2",
          }
        }
      />
      <div
        className="loading-dots"
        style={
          Object {
            "backgroundColor": "#e53b5b",
          }
        }
      />
    </div>
    <p>
      Loading
    </p>
    <svg
      id="Calque_1"
      preserveAspectRatio="none"
      style={
        Object {
          "bottom": 0,
          "maxHeight": 252,
          "position": "absolute",
        }
      }
      viewBox="0 0 252 52"
    >
      <path
        className="st0"
        d="M10.2 41.8c2 3.5 4.2 6.9 6.6 10.1H0v-3.5c3.3-2.3 6.7-4.5 10.2-6.6zM206.1 40.5c-4.6 3.4-8.8 7.2-12.6 11.4h-22.3c5.1-6.9 9.3-14.5 12.5-22.6 7.7 3.3 15.2 7 22.4 11.2z"
        fill="#3394D2"
      />
      <path
        d="M183.7 29.3c-3.2 8.1-7.4 15.7-12.5 22.6H16.7c-2.4-3.2-4.6-6.6-6.6-10.1C36.5 26 66.8 16.3 99.4 14.6a163.613 163.613 0 0 1 19.8 0c22.7 1.2 44.5 6.3 64.5 14.7z"
        fill="#4ebbc2"
      />
      <path
        d="M206.1 40.5c13-9.6 28.8-15.6 45.9-16.4v27.8h-28.6c-.3-.3-.7-.5-1-.8-.3-.2-.6-.5-.9-.7-.1 0-.1-.1-.2-.1-.3-.2-.6-.5-1-.7l-.9-.6c-.1-.1-.2-.2-.3-.2-.2-.2-.5-.3-.7-.5l-.9-.6c-.2-.1-.4-.3-.6-.4-.2-.2-.5-.3-.7-.5l-.9-.6-.9-.6s-.1-.1-.2-.1c-.4-.2-.7-.5-1.1-.7-.4-.2-.8-.5-1.1-.7s-.8-.5-1.2-.7c-.3-.2-.5-.3-.8-.5-1.4-.9-2.6-1.6-3.9-2.4z"
        fill="#e53b5b"
      />
      <path
        d="M223.4 51.9h-29.9c3.8-4.2 8-8 12.6-11.4 1.3.8 2.6 1.5 3.8 2.3.3.2.5.3.8.5.4.2.8.5 1.2.7s.8.5 1.1.7c.4.2.7.5 1.1.7.1 0 .1.1.2.1l.9.6.9.6c.3.2.5.3.7.5.2.1.4.3.6.4l.9.6c.2.2.5.3.7.5.1.1.2.2.3.2l.9.6c.3.2.7.5 1 .7.1 0 .1.1.2.1.3.2.6.5.9.7.4.4.7.6 1.1.9z"
        fill="#6f559f"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots LoadingDots LoadingDots 1`] = `
<div
  className="Loading"
>
  <div
    className="loading-dots"
    style={
      Object {
        "backgroundColor": "#4ebbc2",
      }
    }
  />
  <div
    className="loading-dots"
    style={
      Object {
        "backgroundColor": "#3394d2",
      }
    }
  />
  <div
    className="loading-dots"
    style={
      Object {
        "backgroundColor": "#e53b5b",
      }
    }
  />
</div>
`;

exports[`Storyshots Login Page login 1`] = `
<div
  style={
    Object {
      "height": 800,
    }
  }
>
  <div
    className="Login"
  >
    <div
      className="header"
    >
      <svg
        height={102}
        style={
          Object {
            "paddingBottom": 64,
          }
        }
        viewBox="0 0 297 102"
        width={297}
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <defs>
          <path
            d="M0 63.878V.365h84.277v63.513z"
            id="a"
          />
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M122.377 52.454c-11.104 0-20.138-9.004-20.138-20.072 0-11.067 9.034-20.07 20.138-20.07 11.105 0 20.14 9.003 20.14 20.07 0 11.068-9.035 20.072-20.14 20.072m0-51.828c-17.57 0-31.862 14.246-31.862 31.756 0 17.511 14.293 31.758 31.862 31.758a32.037 32.037 0 0 0 19.63-6.75l1.088-.85v7.6h11.145V31.97c0-1.316-.344-4.275-.485-5.074C151.09 11.674 137.892.626 122.377.626"
            fill="#FFF"
          />
          <g
            transform="translate(0 .261)"
          >
            <mask
              fill="#fff"
              id="b"
            >
              <use
                xlinkHref="#a"
              />
            </mask>
            <path
              d="M60.316 12.116c6.835 0 12.397 5.641 12.397 12.574v39.188h11.564V24.69C84.277 11.277 73.528.365 60.316.365c-6.424 0-12.686 2.695-17.182 7.393l-.995 1.04-.996-1.04C36.643 3.06 30.38.365 23.961.365 10.75.365 0 11.277 0 24.69v39.188h11.564V24.69c0-6.933 5.562-12.574 12.397-12.574 6.834 0 12.393 5.641 12.393 12.574v23.383h11.565V24.69c0-6.933 5.56-12.574 12.397-12.574"
              fill="#FFF"
              mask="url(#b)"
            />
          </g>
          <path
            d="M179.607 12.052h29.86V.582h-29.86c-10.282 0-18.671 7.893-19.093 17.899a4.052 4.052 0 0 0-.047.859c0 2.045.36 4.1 1.068 6.1.934 2.83 2.477 5.244 4.585 7.179 5.318 4.876 12.852 5.427 15.035 5.479.424.01.678.017.847 0h8.386c4.082.036 7.403 3.303 7.403 7.283 0 4.02-3.35 7.289-7.47 7.289h-29.859v11.47h29.86c10.28 0 18.67-7.894 19.092-17.9.047-.275.06-.565.048-.859 0-2.046-.361-4.103-1.07-6.1-.934-2.83-2.477-5.245-4.584-7.179-5.317-4.876-12.851-5.427-15.034-5.479-.363-.008-.623-.014-.815.001h-8.42c-4.081-.036-7.4-3.304-7.4-7.284 0-4.02 3.35-7.288 7.468-7.288"
            fill="#FFF"
          />
          <path
            d="M262.535 89.721c0 2.756-2.25 4.998-5.015 4.998-2.765 0-5.013-2.242-5.013-4.998 0-2.755 2.248-4.997 5.013-4.997 2.765 0 5.015 2.242 5.015 4.997m3.24-1.443c-.69-3.939-4.158-6.91-8.255-6.91-4.621 0-8.38 3.748-8.38 8.353 0 4.606 3.759 8.354 8.38 8.354a8.384 8.384 0 0 0 5.164-1.775v1.564h3.218v-8.25c0-.348-.089-1.116-.127-1.336m26.94 6.253l-.153-.293-.287.184a2.995 2.995 0 0 1-.353.176l-.03.012a3.48 3.48 0 0 1-.673.181l-.024.005-.09.01c-.457.054-.876.023-1.25-.107a2.04 2.04 0 0 1-.13-.052l-.063-.03a1.886 1.886 0 0 1-.208-.117l-.03-.019a1.775 1.775 0 0 1-.768-1.317v-8.357h3.464v-3.152h-3.464V77.53h-3.22v16.123c0 .864.4 2.137 1.522 3.119 1.046.916 2.4 1.108 3.35 1.108.254 0 .512-.013.778-.043.078-.012.163-.027.245-.043l.015-.002c1.095-.126 2.04-.73 2.303-.913l.166-.115-1.1-2.234zm-48.69-2.729c0 1.508-1.206 2.734-2.69 2.734-1.483 0-2.69-1.226-2.69-2.734V85.76h-3.493v6.042c0 1.508-1.207 2.734-2.691 2.734-1.484 0-2.69-1.226-2.69-2.734v-9.9h-3.495v9.9c0 3.459 2.774 6.272 6.185 6.272a6.15 6.15 0 0 0 4.437-1.908 6.153 6.153 0 0 0 4.436 1.908c3.411 0 6.186-2.813 6.186-6.272v-9.9h-3.495v9.9zm31.709-10.433c-2.921 0-5.123 1.091-6.544 3.244-1.156 1.751-1.156 3.772-1.156 5.109v7.976h3.493v-8.647c0-.999.305-4.259 4.207-4.259 3.902 0 4.205 3.26 4.205 4.259v8.647h3.495v-7.976c0-1.337 0-3.358-1.156-5.11-1.423-2.152-3.624-3.243-6.544-3.243m19.506-2.01c.255 0 .433-.087.433-.294 0-.184-.102-.304-.407-.304h-.271v.599h.245zm-.517-.82h.586c.33 0 .652.11.652.51 0 .199-.144.39-.339.446l.416.686h-.314l-.33-.606h-.4v.606h-.27v-1.643zm1.857.853c0-.766-.568-1.331-1.28-1.331-.712 0-1.28.565-1.28 1.33 0 .757.568 1.307 1.28 1.307.712 0 1.28-.55 1.28-1.306zm-2.823 0c0-.933.703-1.555 1.543-1.555.847 0 1.543.622 1.543 1.555 0 .924-.696 1.538-1.543 1.538-.84 0-1.543-.614-1.543-1.538z"
            fill="#CCC"
          />
          <path
            d="M271.991 50.827c3.694-5.22 5.872-11.632 5.872-18.564 0-17.528-13.918-31.737-31.087-31.737-17.17 0-31.087 14.21-31.087 31.737 0 17.528 13.917 31.737 31.087 31.737.158 0 .317-.003.475-.006V53.311l.048-.389c-.174.005-.348.008-.523.008-11.14 0-20.173-9.253-20.173-20.667 0-11.413 9.032-20.666 20.173-20.666 11.14 0 20.172 9.253 20.172 20.666 0 7.926-4.356 14.808-10.748 18.275l15.867 13.935 6.644-7.756-6.72-5.89z"
            fill="#FFF"
          />
          <path
            d="M221.63 93.703a11.614 11.614 0 0 0 2.396-7.1c0-6.491-5.3-11.773-11.813-11.773-6.513 0-11.813 5.282-11.813 11.774 0 6.492 5.3 11.773 11.813 11.773.324 0 .648-.018.972-.045v-3.795a8.237 8.237 0 0 1-.972.063c-4.484 0-8.132-3.635-8.132-8.104 0-4.469 3.648-8.105 8.132-8.105 4.483 0 8.132 3.636 8.132 8.105a8.058 8.058 0 0 1-3.843 6.884l-.267.166 5.603 4.92 2.242-2.618-2.45-2.145zm-42.362-2.015c-1.044 0-1.883.789-1.883 1.909 0 1.104.791 1.892 1.883 1.892 1.14 0 1.899-.788 1.899-1.892 0-1.12-.839-1.909-1.9-1.909m.84 6.183a3.6 3.6 0 0 1-2.659-1.151h-.032v.915h-2.77V84.07h2.802v6.246c.665-.647 1.567-1.01 2.658-1.01 2.374 0 4.036 1.925 4.036 4.29 0 2.367-1.662 4.275-4.036 4.275M194.84 89.543l-6.378 12.192h-3.228l2.802-5.362-3.846-6.83h3.228l2.263 4.149 1.931-4.149z"
            fill="#CCC"
          />
        </g>
      </svg>
      <h1>
        Who is it ?
      </h1>
    </div>
    <div
      className="users"
    >
      <a
        href="devices"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          className="Avatar"
          style={
            Object {
              "backgroundImage": "url(https://randomuser.me/api/portraits/women/79.jpg)",
            }
          }
        />
        <p>
          Mustang
        </p>
      </a>
      <a
        href="devices"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          className="Avatar"
          style={
            Object {
              "backgroundImage": "url(https://randomuser.me/api/portraits/men/1.jpg)",
            }
          }
        />
        <p>
          Jeff
        </p>
      </a>
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "textDecoration": "none",
          }
        }
      >
        <div
          style={
            Object {
              "height": "120px",
            }
          }
        >
          <svg
            height={120}
            viewBox="0 0 120 120"
            width={120}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                opacity={0.5}
              >
                <rect
                  fill="#1f2330"
                  height={120}
                  rx={10}
                  width={120}
                />
                <rect
                  height={118}
                  rx={10}
                  stroke="#fff"
                  strokeWidth={2}
                  width={118}
                  x={1}
                  y={1}
                />
              </g>
              <path
                d="M78.667 60c0 1.4-.934 2.333-2.334 2.333h-14v14c0 1.4-.933 2.334-2.333 2.334s-2.333-.934-2.333-2.334v-14h-14c-1.4 0-2.334-.933-2.334-2.333s.934-2.333 2.334-2.333h14v-14c0-1.4.933-2.334 2.333-2.334s2.333.934 2.333 2.334v14h14c1.4 0 2.334.933 2.334 2.333z"
                fill="#fff"
                fillRule="nonzero"
                opacity={0.5}
              />
            </g>
          </svg>
        </div>
        <p
          id="add-user"
        >
          Add user
        </p>
      </div>
    </div>
    <svg
      id="Calque_1"
      preserveAspectRatio="none"
      style={
        Object {
          "bottom": 0,
          "maxHeight": 252,
          "position": "absolute",
        }
      }
      viewBox="0 0 252 52"
    >
      <path
        className="st0"
        d="M10.2 41.8c2 3.5 4.2 6.9 6.6 10.1H0v-3.5c3.3-2.3 6.7-4.5 10.2-6.6zM206.1 40.5c-4.6 3.4-8.8 7.2-12.6 11.4h-22.3c5.1-6.9 9.3-14.5 12.5-22.6 7.7 3.3 15.2 7 22.4 11.2z"
        fill="#3394D2"
      />
      <path
        d="M183.7 29.3c-3.2 8.1-7.4 15.7-12.5 22.6H16.7c-2.4-3.2-4.6-6.6-6.6-10.1C36.5 26 66.8 16.3 99.4 14.6a163.613 163.613 0 0 1 19.8 0c22.7 1.2 44.5 6.3 64.5 14.7z"
        fill="#4ebbc2"
      />
      <path
        d="M206.1 40.5c13-9.6 28.8-15.6 45.9-16.4v27.8h-28.6c-.3-.3-.7-.5-1-.8-.3-.2-.6-.5-.9-.7-.1 0-.1-.1-.2-.1-.3-.2-.6-.5-1-.7l-.9-.6c-.1-.1-.2-.2-.3-.2-.2-.2-.5-.3-.7-.5l-.9-.6c-.2-.1-.4-.3-.6-.4-.2-.2-.5-.3-.7-.5l-.9-.6-.9-.6s-.1-.1-.2-.1c-.4-.2-.7-.5-1.1-.7-.4-.2-.8-.5-1.1-.7s-.8-.5-1.2-.7c-.3-.2-.5-.3-.8-.5-1.4-.9-2.6-1.6-3.9-2.4z"
        fill="#e53b5b"
      />
      <path
        d="M223.4 51.9h-29.9c3.8-4.2 8-8 12.6-11.4 1.3.8 2.6 1.5 3.8 2.3.3.2.5.3.8.5.4.2.8.5 1.2.7s.8.5 1.1.7c.4.2.7.5 1.1.7.1 0 .1.1.2.1l.9.6.9.6c.3.2.5.3.7.5.2.1.4.3.6.4l.9.6c.2.2.5.3.7.5.1.1.2.2.3.2l.9.6c.3.2.7.5 1 .7.1 0 .1.1.2.1.3.2.6.5.9.7.4.4.7.6 1.1.9z"
        fill="#6f559f"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Modal empty modal 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.7)",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1,
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "white",
        "boxShadow": "0 2px 16px 0 rgba(0, 0, 0, 0.16)",
        "height": undefined,
        "left": "50%",
        "opacity": 1,
        "position": "absolute",
        "top": "50%",
        "transform": "translate(-50%, -50%)",
        "width": undefined,
        "zIndex": 1,
      }
    }
  >
    <svg
      height={9}
      onClick={[Function]}
      style={
        Object {
          "color": "#191919",
          "cursor": "pointer",
          "float": "right",
          "marginRight": 20,
          "marginTop": 20,
          "opacity": 0.4,
        }
      }
      viewBox="0 0 14 14"
      width={9}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M13.7 12.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3L7 8.4l-5.3 5.3c-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4L5.6 7 .3 1.7C-.1 1.3-.1.7.3.3c.4-.4 1-.4 1.4 0L7 5.6 12.3.3c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L8.4 7l5.3 5.3z"
          id="close-svg"
        />
      </defs>
      <use
        fill="currentColor"
        fillRule="nonzero"
        xlinkHref="#close-svg"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Modal with a button as children 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0.7)",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1,
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "white",
        "boxShadow": "0 2px 16px 0 rgba(0, 0, 0, 0.16)",
        "height": undefined,
        "left": "50%",
        "opacity": 1,
        "position": "absolute",
        "top": "50%",
        "transform": "translate(-50%, -50%)",
        "width": undefined,
        "zIndex": 1,
      }
    }
  >
    <svg
      height={9}
      onClick={[Function]}
      style={
        Object {
          "color": "#191919",
          "cursor": "pointer",
          "float": "right",
          "marginRight": 20,
          "marginTop": 20,
          "opacity": 0.4,
        }
      }
      viewBox="0 0 14 14"
      width={9}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M13.7 12.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3L7 8.4l-5.3 5.3c-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4L5.6 7 .3 1.7C-.1 1.3-.1.7.3.3c.4-.4 1-.4 1.4 0L7 5.6 12.3.3c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L8.4 7l5.3 5.3z"
          id="close-svg"
        />
      </defs>
      <use
        fill="currentColor"
        fillRule="nonzero"
        xlinkHref="#close-svg"
      />
    </svg>
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <button
        className="Button primary"
        onClick={undefined}
        style={
          Object {
            "width": undefined,
          }
        }
      >
        A button inside a modal
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Notification notification 1`] = `
<div
  className="Notification"
>
  <div
    id="left-notif"
  >
    <svg
      height={22}
      id="infos-icon"
      viewBox="0 0 22 22"
      width={22}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M11 0C4.9 0 0 4.9 0 11s4.9 11 11 11 11-4.9 11-11S17.1 0 11 0zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm1-9v4c0 .6-.4 1-1 1s-1-.4-1-1v-4c0-.6.4-1 1-1s1 .4 1 1zm-.3-4.7c.2.2.3.4.3.7 0 .3-.1.5-.3.7-.2.2-.4.3-.7.3h-.2c-.1 0-.1 0-.2-.1-.1 0-.1-.1-.2-.1s-.1-.1-.1-.1c-.2-.2-.3-.4-.3-.7 0-.3.1-.5.3-.7l.1-.1c.1 0 .1-.1.2-.1s.1 0 .2-.1c.3 0 .7.1.9.3z"
          id="infos-svg"
        />
      </defs>
      <use
        fill="currentColor"
        fillRule="nonzero"
        xlinkHref="#infos-svg"
      />
    </svg>
    <p>
      some notification
    </p>
  </div>
  <svg
    height={14}
    id="close-icon"
    onClick={undefined}
    viewBox="0 0 14 14"
    width={14}
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M13.7 12.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3L7 8.4l-5.3 5.3c-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4L5.6 7 .3 1.7C-.1 1.3-.1.7.3.3c.4-.4 1-.4 1.4 0L7 5.6 12.3.3c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L8.4 7l5.3 5.3z"
        id="close-svg"
      />
    </defs>
    <use
      fill="currentColor"
      fillRule="nonzero"
      xlinkHref="#close-svg"
    />
  </svg>
</div>
`;

exports[`Storyshots QRCode QRCode 1`] = `
<div
  className="QRCode"
  style={
    Object {
      "backgroundImage": "url(http://www.datafakegenerator.com/temp/test409236e0431d1d4dcf66ffba56d9d43c.png)",
    }
  }
/>
`;

exports[`Storyshots Settings Page settings 1`] = `
<div
  className="Settings"
>
  <div>
    <div
      className="title-container"
    >
      <h1>
        Your profile
      </h1>
      <h3>
        Edit your personal informations
      </h3>
    </div>
    <div
      className="profile"
    >
      <div>
        <input
          accept=".jpg, .jpeg, .png"
          name="avatar"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
        <div
          className="Avatar upload"
          onClick={[Function]}
          style={
            Object {
              "backgroundImage": "url(https://randomuser.me/api/portraits/women/79.jpg)",
            }
          }
        >
          <svg
            className="camera"
            color="white"
            height={33}
            viewBox="0 0 24 20"
            width={40}
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <defs>
              <path
                d="M21 3h-3.5L15.8.4c-.2-.2-.5-.4-.8-.4H9c-.3 0-.6.2-.8.4L6.5 3H3C1.3 3 0 4.3 0 6v11c0 1.7 1.3 3 3 3h18c1.7 0 3-1.3 3-3V6c0-1.7-1.3-3-3-3zm1 14c0 .6-.4 1-1 1H3c-.6 0-1-.4-1-1V6c0-.6.4-1 1-1h4c.3 0 .6-.2.8-.4L9.5 2h4.9l1.7 2.6c.3.2.6.4.9.4h4c.6 0 1 .4 1 1v11zM12 6c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 8c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3-1.3 3-3 3z"
                id="camera-svg"
              />
            </defs>
            <use
              fill="currentColor"
              fillRule="nonzero"
              xlinkHref="#camera-svg"
            />
          </svg>
        </div>
      </div>
      <div
        className="inputs"
      >
        <div
          className="TextInput"
        >
          <input
            defaultValue="Ford"
            onChange={[Function]}
            type="text"
          />
          <label>
            Last Name
          </label>
        </div>
        <div
          className="TextInput"
        >
          <input
            defaultValue="Alicia"
            onChange={[Function]}
            type="text"
          />
          <label>
            First Name
          </label>
        </div>
        <div
          className="TextInput"
        >
          <input
            defaultValue="Mustang"
            onChange={[Function]}
            type="text"
          />
          <label>
            Username (Displayed)
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sidebar"
  >
    <button
      className="Button secondary"
      onClick={[Function]}
      style={
        Object {
          "width": 200,
        }
      }
    >
      SAVE
    </button>
  </div>
</div>
`;

exports[`Storyshots Sidebar with a user 1`] = `
<div
  style={
    Object {
      "height": 800,
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
      }
    }
  />
</div>
`;

exports[`Storyshots Signup Modal signup modal 1`] = `
<div
  style={
    Object {
      "marginTop": "35%",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.7)",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "white",
          "boxShadow": "0 2px 16px 0 rgba(0, 0, 0, 0.16)",
          "height": 670,
          "left": "50%",
          "opacity": 1,
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": 511,
          "zIndex": 1,
        }
      }
    >
      <svg
        height={9}
        onClick={[Function]}
        style={
          Object {
            "color": "#191919",
            "cursor": "pointer",
            "float": "right",
            "marginRight": 20,
            "marginTop": 20,
            "opacity": 0.4,
          }
        }
        viewBox="0 0 14 14"
        width={9}
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <defs>
          <path
            d="M13.7 12.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3L7 8.4l-5.3 5.3c-.2.2-.4.3-.7.3-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4L5.6 7 .3 1.7C-.1 1.3-.1.7.3.3c.4-.4 1-.4 1.4 0L7 5.6 12.3.3c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L8.4 7l5.3 5.3z"
            id="close-svg"
          />
        </defs>
        <use
          fill="currentColor"
          fillRule="nonzero"
          xlinkHref="#close-svg"
        />
      </svg>
      <div
        className="Signup"
      >
        <h1>
          Add a new user
        </h1>
        <div>
          <input
            accept=".jpg, .jpeg, .png"
            name="avatar"
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
          <svg
            className="Avatar upload"
            color="var(--grey-200)"
            height={120}
            onClick={[Function]}
            style={
              Object {
                "backgroundImage": "url(null)",
              }
            }
            viewBox="0 0 120 120"
            width={120}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <rect
                height={118}
                opacity={0.5}
                rx={10}
                stroke="#999"
                strokeWidth={2}
                width={118}
                x={1}
                y={1}
              />
              <path
                d="M77.2 46.6h-6.533l-3.174-4.853C67.12 41.373 66.56 41 66 41H54.8c-.56 0-1.12.373-1.493.747L50.133 46.6H43.6c-3.173 0-5.6 2.427-5.6 5.6v20.533c0 3.174 2.427 5.6 5.6 5.6h33.6c3.173 0 5.6-2.426 5.6-5.6V52.2c0-3.173-2.427-5.6-5.6-5.6zm1.867 26.133c0 1.12-.747 1.867-1.867 1.867H43.6c-1.12 0-1.867-.747-1.867-1.867V52.2c0-1.12.747-1.867 1.867-1.867h7.467c.56 0 1.12-.373 1.493-.746l3.173-4.854h9.147l3.173 4.854c.56.373 1.12.746 1.68.746H77.2c1.12 0 1.867.747 1.867 1.867zM60.4 52.2c-5.227 0-9.333 4.107-9.333 9.333 0 5.227 4.106 9.334 9.333 9.334s9.333-4.107 9.333-9.334c0-5.226-4.106-9.333-9.333-9.333zm0 14.933c-3.173 0-5.6-2.426-5.6-5.6 0-3.173 2.427-5.6 5.6-5.6s5.6 2.427 5.6 5.6c0 3.174-2.427 5.6-5.6 5.6z"
                fill="#ccc"
                fillRule="nonzero"
              />
            </g>
          </svg>
        </div>
        <button
          className="Button secondary"
          onClick={[Function]}
          style={
            Object {
              "width": undefined,
            }
          }
        >
          IMPORT A PHOTO
        </button>
        <div
          className="TextInput"
        >
          <input
            defaultValue={undefined}
            onChange={[Function]}
            type="text"
          />
          <label>
            Last Name
          </label>
        </div>
        <div
          className="TextInput"
        >
          <input
            defaultValue={undefined}
            onChange={[Function]}
            type="text"
          />
          <label>
            First Name
          </label>
        </div>
        <div
          className="TextInput"
        >
          <input
            defaultValue={undefined}
            onChange={[Function]}
            type="text"
          />
          <label>
            Username (displayed)
          </label>
        </div>
        <button
          className="Button primary"
          onClick={[Function]}
          style={
            Object {
              "width": undefined,
            }
          }
        >
          Finish
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Splash Page splash 1`] = `
<div
  style={
    Object {
      "height": 800,
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "var(--blue-500)",
        "display": "grid",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <svg
      height={152}
      viewBox="0 0 297 102"
      width={386}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M0 63.878V.365h84.277v63.513z"
          id="a"
        />
      </defs>
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M122.377 52.454c-11.104 0-20.138-9.004-20.138-20.072 0-11.067 9.034-20.07 20.138-20.07 11.105 0 20.14 9.003 20.14 20.07 0 11.068-9.035 20.072-20.14 20.072m0-51.828c-17.57 0-31.862 14.246-31.862 31.756 0 17.511 14.293 31.758 31.862 31.758a32.037 32.037 0 0 0 19.63-6.75l1.088-.85v7.6h11.145V31.97c0-1.316-.344-4.275-.485-5.074C151.09 11.674 137.892.626 122.377.626"
          fill="#FFF"
        />
        <g
          transform="translate(0 .261)"
        >
          <mask
            fill="#fff"
            id="b"
          >
            <use
              xlinkHref="#a"
            />
          </mask>
          <path
            d="M60.316 12.116c6.835 0 12.397 5.641 12.397 12.574v39.188h11.564V24.69C84.277 11.277 73.528.365 60.316.365c-6.424 0-12.686 2.695-17.182 7.393l-.995 1.04-.996-1.04C36.643 3.06 30.38.365 23.961.365 10.75.365 0 11.277 0 24.69v39.188h11.564V24.69c0-6.933 5.562-12.574 12.397-12.574 6.834 0 12.393 5.641 12.393 12.574v23.383h11.565V24.69c0-6.933 5.56-12.574 12.397-12.574"
            fill="#FFF"
            mask="url(#b)"
          />
        </g>
        <path
          d="M179.607 12.052h29.86V.582h-29.86c-10.282 0-18.671 7.893-19.093 17.899a4.052 4.052 0 0 0-.047.859c0 2.045.36 4.1 1.068 6.1.934 2.83 2.477 5.244 4.585 7.179 5.318 4.876 12.852 5.427 15.035 5.479.424.01.678.017.847 0h8.386c4.082.036 7.403 3.303 7.403 7.283 0 4.02-3.35 7.289-7.47 7.289h-29.859v11.47h29.86c10.28 0 18.67-7.894 19.092-17.9.047-.275.06-.565.048-.859 0-2.046-.361-4.103-1.07-6.1-.934-2.83-2.477-5.245-4.584-7.179-5.317-4.876-12.851-5.427-15.034-5.479-.363-.008-.623-.014-.815.001h-8.42c-4.081-.036-7.4-3.304-7.4-7.284 0-4.02 3.35-7.288 7.468-7.288"
          fill="#FFF"
        />
        <path
          d="M262.535 89.721c0 2.756-2.25 4.998-5.015 4.998-2.765 0-5.013-2.242-5.013-4.998 0-2.755 2.248-4.997 5.013-4.997 2.765 0 5.015 2.242 5.015 4.997m3.24-1.443c-.69-3.939-4.158-6.91-8.255-6.91-4.621 0-8.38 3.748-8.38 8.353 0 4.606 3.759 8.354 8.38 8.354a8.384 8.384 0 0 0 5.164-1.775v1.564h3.218v-8.25c0-.348-.089-1.116-.127-1.336m26.94 6.253l-.153-.293-.287.184a2.995 2.995 0 0 1-.353.176l-.03.012a3.48 3.48 0 0 1-.673.181l-.024.005-.09.01c-.457.054-.876.023-1.25-.107a2.04 2.04 0 0 1-.13-.052l-.063-.03a1.886 1.886 0 0 1-.208-.117l-.03-.019a1.775 1.775 0 0 1-.768-1.317v-8.357h3.464v-3.152h-3.464V77.53h-3.22v16.123c0 .864.4 2.137 1.522 3.119 1.046.916 2.4 1.108 3.35 1.108.254 0 .512-.013.778-.043.078-.012.163-.027.245-.043l.015-.002c1.095-.126 2.04-.73 2.303-.913l.166-.115-1.1-2.234zm-48.69-2.729c0 1.508-1.206 2.734-2.69 2.734-1.483 0-2.69-1.226-2.69-2.734V85.76h-3.493v6.042c0 1.508-1.207 2.734-2.691 2.734-1.484 0-2.69-1.226-2.69-2.734v-9.9h-3.495v9.9c0 3.459 2.774 6.272 6.185 6.272a6.15 6.15 0 0 0 4.437-1.908 6.153 6.153 0 0 0 4.436 1.908c3.411 0 6.186-2.813 6.186-6.272v-9.9h-3.495v9.9zm31.709-10.433c-2.921 0-5.123 1.091-6.544 3.244-1.156 1.751-1.156 3.772-1.156 5.109v7.976h3.493v-8.647c0-.999.305-4.259 4.207-4.259 3.902 0 4.205 3.26 4.205 4.259v8.647h3.495v-7.976c0-1.337 0-3.358-1.156-5.11-1.423-2.152-3.624-3.243-6.544-3.243m19.506-2.01c.255 0 .433-.087.433-.294 0-.184-.102-.304-.407-.304h-.271v.599h.245zm-.517-.82h.586c.33 0 .652.11.652.51 0 .199-.144.39-.339.446l.416.686h-.314l-.33-.606h-.4v.606h-.27v-1.643zm1.857.853c0-.766-.568-1.331-1.28-1.331-.712 0-1.28.565-1.28 1.33 0 .757.568 1.307 1.28 1.307.712 0 1.28-.55 1.28-1.306zm-2.823 0c0-.933.703-1.555 1.543-1.555.847 0 1.543.622 1.543 1.555 0 .924-.696 1.538-1.543 1.538-.84 0-1.543-.614-1.543-1.538z"
          fill="#CCC"
        />
        <path
          d="M271.991 50.827c3.694-5.22 5.872-11.632 5.872-18.564 0-17.528-13.918-31.737-31.087-31.737-17.17 0-31.087 14.21-31.087 31.737 0 17.528 13.917 31.737 31.087 31.737.158 0 .317-.003.475-.006V53.311l.048-.389c-.174.005-.348.008-.523.008-11.14 0-20.173-9.253-20.173-20.667 0-11.413 9.032-20.666 20.173-20.666 11.14 0 20.172 9.253 20.172 20.666 0 7.926-4.356 14.808-10.748 18.275l15.867 13.935 6.644-7.756-6.72-5.89z"
          fill="#FFF"
        />
        <path
          d="M221.63 93.703a11.614 11.614 0 0 0 2.396-7.1c0-6.491-5.3-11.773-11.813-11.773-6.513 0-11.813 5.282-11.813 11.774 0 6.492 5.3 11.773 11.813 11.773.324 0 .648-.018.972-.045v-3.795a8.237 8.237 0 0 1-.972.063c-4.484 0-8.132-3.635-8.132-8.104 0-4.469 3.648-8.105 8.132-8.105 4.483 0 8.132 3.636 8.132 8.105a8.058 8.058 0 0 1-3.843 6.884l-.267.166 5.603 4.92 2.242-2.618-2.45-2.145zm-42.362-2.015c-1.044 0-1.883.789-1.883 1.909 0 1.104.791 1.892 1.883 1.892 1.14 0 1.899-.788 1.899-1.892 0-1.12-.839-1.909-1.9-1.909m.84 6.183a3.6 3.6 0 0 1-2.659-1.151h-.032v.915h-2.77V84.07h2.802v6.246c.665-.647 1.567-1.01 2.658-1.01 2.374 0 4.036 1.925 4.036 4.29 0 2.367-1.662 4.275-4.036 4.275M194.84 89.543l-6.378 12.192h-3.228l2.802-5.362-3.846-6.83h3.228l2.263 4.149 1.931-4.149z"
          fill="#CCC"
        />
      </g>
    </svg>
    <svg
      id="Calque_1"
      preserveAspectRatio="none"
      style={
        Object {
          "bottom": 0,
          "position": "absolute",
        }
      }
      viewBox="0 0 252 52"
    >
      <path
        className="st0"
        d="M10.2 41.8c2 3.5 4.2 6.9 6.6 10.1H0v-3.5c3.3-2.3 6.7-4.5 10.2-6.6zM206.1 40.5c-4.6 3.4-8.8 7.2-12.6 11.4h-22.3c5.1-6.9 9.3-14.5 12.5-22.6 7.7 3.3 15.2 7 22.4 11.2z"
        fill="#3394D2"
      />
      <path
        d="M183.7 29.3c-3.2 8.1-7.4 15.7-12.5 22.6H16.7c-2.4-3.2-4.6-6.6-6.6-10.1C36.5 26 66.8 16.3 99.4 14.6a163.613 163.613 0 0 1 19.8 0c22.7 1.2 44.5 6.3 64.5 14.7z"
        fill="#4ebbc2"
      />
      <path
        d="M206.1 40.5c13-9.6 28.8-15.6 45.9-16.4v27.8h-28.6c-.3-.3-.7-.5-1-.8-.3-.2-.6-.5-.9-.7-.1 0-.1-.1-.2-.1-.3-.2-.6-.5-1-.7l-.9-.6c-.1-.1-.2-.2-.3-.2-.2-.2-.5-.3-.7-.5l-.9-.6c-.2-.1-.4-.3-.6-.4-.2-.2-.5-.3-.7-.5l-.9-.6-.9-.6s-.1-.1-.2-.1c-.4-.2-.7-.5-1.1-.7-.4-.2-.8-.5-1.1-.7s-.8-.5-1.2-.7c-.3-.2-.5-.3-.8-.5-1.4-.9-2.6-1.6-3.9-2.4z"
        fill="#e53b5b"
      />
      <path
        d="M223.4 51.9h-29.9c3.8-4.2 8-8 12.6-11.4 1.3.8 2.6 1.5 3.8 2.3.3.2.5.3.8.5.4.2.8.5 1.2.7s.8.5 1.1.7c.4.2.7.5 1.1.7.1 0 .1.1.2.1l.9.6.9.6c.3.2.5.3.7.5.2.1.4.3.6.4l.9.6c.2.2.5.3.7.5.1.1.2.2.3.2l.9.6c.3.2.7.5 1 .7.1 0 .1.1.2.1.3.2.6.5.9.7.4.4.7.6 1.1.9z"
        fill="#6f559f"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots SwitchButton primary checked 1`] = `
<div
  className="SwitchButton"
>
  <label
    style={
      Object {
        "color": "#40ae6c",
      }
    }
  >
    ENABLED
  </label>
  <div
    className=""
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className=""
      id="background"
      style={
        Object {
          "backgroundColor": "#40ae6c",
        }
      }
    />
    <div
      className=""
      id="cursor"
      style={
        Object {
          "transform": "translate3d(26px, 0, 0)",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots SwitchButton primary unchecked 1`] = `
<div
  className="SwitchButton"
>
  <label
    style={
      Object {
        "color": null,
      }
    }
  >
    DISABLED
  </label>
  <div
    className=""
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className=""
      id="background"
      style={Object {}}
    />
    <div
      className=""
      id="cursor"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots SwitchButton secondary checked 1`] = `
<div
  className="SwitchButton"
>
  <div
    className="secondary"
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className="secondary"
      id="background"
      style={
        Object {
          "backgroundColor": "#458bf8",
        }
      }
    />
    <div
      className="secondary"
      id="cursor"
      style={
        Object {
          "transform": "translate3d(32px, 0, 0)",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots SwitchButton secondary unchecked 1`] = `
<div
  className="SwitchButton"
>
  <div
    className="secondary"
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className="secondary"
      id="background"
      style={Object {}}
    />
    <div
      className="secondary"
      id="cursor"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots Tabs with one tab 1`] = `
<div
  className="Tabs"
>
  <div
    className="active"
    id="tab"
    onClick={[Function]}
  >
    <svg
      height={22}
      viewBox="0 0 16 22"
      width={16}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M13 0H3C1.3 0 0 1.3 0 3v16c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V3c0-1.7-1.3-3-3-3zm1 19c0 .6-.4 1-1 1H3c-.6 0-1-.4-1-1V3c0-.6.4-1 1-1h10c.6 0 1 .4 1 1v16zm-6-1a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          id="smartphone-svg"
        />
      </defs>
      <use
        fill="currentColor"
        fillRule="nonzero"
        xlinkHref="#smartphone-svg"
      />
    </svg>
    <p>
      DEVICES
    </p>
  </div>
</div>
`;

exports[`Storyshots Tabs with two tabs 1`] = `
<div
  className="Tabs"
>
  <div
    className="active"
    id="tab"
    onClick={[Function]}
  >
    <svg
      height={22}
      viewBox="0 0 16 22"
      width={16}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M13 0H3C1.3 0 0 1.3 0 3v16c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V3c0-1.7-1.3-3-3-3zm1 19c0 .6-.4 1-1 1H3c-.6 0-1-.4-1-1V3c0-.6.4-1 1-1h10c.6 0 1 .4 1 1v16zm-6-1a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
          id="smartphone-svg"
        />
      </defs>
      <use
        fill="currentColor"
        fillRule="nonzero"
        xlinkHref="#smartphone-svg"
      />
    </svg>
    <p>
      DEVICES
    </p>
  </div>
  <div
    className="inactive"
    id="tab"
    onClick={[Function]}
  >
    <svg
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M17 0H3C1.3 0 0 1.3 0 3v14c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3V3c0-1.7-1.3-3-3-3zM3 2h14c.6 0 1 .4 1 1v3H2V3c0-.6.4-1 1-1zM2 17V8h4v10H3c-.6 0-1-.4-1-1zm15 1H8V8h10v9c0 .6-.4 1-1 1z"
          id="apps-svg"
        />
      </defs>
      <use
        fill="currentColor"
        fillRule="nonzero"
        xlinkHref="#apps-svg"
      />
    </svg>
    <p>
      APPLICATIONS
    </p>
  </div>
</div>
`;

exports[`Storyshots TextInput with error 1`] = `
<div
  className="TextInput error"
>
  <input
    defaultValue={undefined}
    onChange={undefined}
    type="text"
  />
  <label>
    some button
  </label>
</div>
`;

exports[`Storyshots TextInput with one label 1`] = `
<div
  className="TextInput"
>
  <input
    defaultValue={undefined}
    onChange={undefined}
    type="text"
  />
  <label>
    some input
  </label>
</div>
`;

exports[`Storyshots TextInput with one label and a default value 1`] = `
<div
  className="TextInput"
>
  <input
    defaultValue="default text"
    onChange={undefined}
    type="text"
  />
  <label>
    some button
  </label>
</div>
`;
